--- a/customapi/pom.xml
+++ b/customapi/pom.xml
@@ -14,7 +14,7 @@
 	<groupId>com.publicissapient.kpidashboard</groupId>
 	<artifactId>customapi</artifactId>
 	<description>Rest API Layer</description>
-	<version>9.1.1</version>
+	<version>9.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 
@@ -625,7 +625,7 @@
 	</profiles>
 
 	<scm>
-		<tag>9.1.1</tag>
+		<tag>4.6.1</tag>
 	</scm>
 </project>
 
