--- a/customapi/src/main/resources/application.properties
+++ b/customapi/src/main/resources/application.properties
@@ -268,7 +268,7 @@ processorurl.bitbucket=http://devops-processor:50003/processor/run
 processorurl.excel=http://devops-processor:50006/processor/run
 processorurl.jenkins=http://devops-processor:50007/processor/run
 processorurl.jira=http://jira-processor:50008/api/job/startprojectwiseissuejob
-processorurl.jira2=http://jira-processor:50009/api/job/projectData
+processorurl.jira2=http://jira-processor-v2:50009/api/job/projectData
 processorurl.sonar=http://devops-processor:50011/processor/run
 processorurl.teamcity=http://devops-processor:50012/processor/run
 processorurl.gitlab=http://devops-processor:50014/processor/run
