--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -2779,8 +2779,7 @@
     "fieldName": "releaseListKPI150",
     "fieldLabel": "Select releases to define team velocity",
     "fieldType": "chips",
-
-
+    "fieldCategory": "releases",
     "section": "Custom Fields Mapping",
     "tooltip": {
       "definition": "Select release to predict the release prediction end date of active release on the basis of average velocity"
