DTS-34986-AuthNAuth-upgrade-final Increase the cookie duration to 1day and save saml details only the first time user logs in

--- a/central-auth-service/authapi/src/main/resources/application.yml
+++ b/central-auth-service/authapi/src/main/resources/application.yml
@@ -3,7 +3,7 @@ auth:
 
   cookie:
     duration: 86400
-    domain: publicissapient.com
+    domain: tools.publicis.sapient.com
     isSameSite: true
     isSecure: true
 
