--- a/central-auth-service/authapi/src/main/resources/application.yml
+++ b/central-auth-service/authapi/src/main/resources/application.yml
@@ -3,7 +3,7 @@ auth:
 
   cookie:
     duration: 86400
-    domain: tools.publicis.sapient.com
+    domain: publicissapient.com
     isSameSite: true
     isSecure: true
 
