--- a/Kubernetes/Kubernetes-manifest/customapi.yaml
+++ b/Kubernetes/Kubernetes-manifest/customapi.yaml
@@ -25,14 +25,17 @@ spec:
       #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
       containers:
         - name: customapi
-          image: speedtools.azurecr.io/knowhow-customapi:9.1.0
+          image: speedtools.azurecr.io/knowhow-customapi:9.2.0
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
-          # resources:
-          #   requests:
-          #     memory: "1Gi"
-          #     cpu: "0.5"
+          resources:
+            #requests:
+            #  memory: "1Gi"
+            #  cpu: "0.5"
+            limits:
+              memory: "3Gi"
+              cpu: "1"
           readinessProbe:
             tcpSocket:
               port: 8080
@@ -92,9 +95,9 @@ spec:
             - name: mongock.migration-scan-package
               value: "com.publicissapient.kpidashboard.apis.mongock.upgrade"
             - name: mongock.start-system-version
-              value: "9.0.0"
-            - name: mongock.end-system-version
               value: "9.1.0"
+            - name: mongock.end-system-version
+              value: "9.2.0"
           envFrom:
           - configMapRef:
               name: knowhow-config  
