--- a/Kubernetes-prod/Kubernetes-manifest/azure-board.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/azure-board.yaml
@@ -24,7 +24,7 @@ spec:
       #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
       containers:
       - name: azure-board-processor
-        image: speedtools.azurecr.io/knowhow-azure-board-processor:9.1.0
+        image: speedtools.azurecr.io/knowhow-azure-board-processor:9.2.0
         imagePullPolicy: Always
         env:
             - name: spring.data.mongodb.uri
@@ -63,10 +63,13 @@ spec:
             # Adding cron expressions
             - name: azure.cron
               value: "0 0 */12 * * *"
-        # resources:
-        #   requests:
-        #     memory: "1Gi"
-        #     cpu: "0.5"
+        resources:
+          #requests:
+          #  memory: "200Mi"
+          #  cpu: "0.2"
+          limits:
+            memory: "2Gi"
+            cpu: "1"
         ports:
           - containerPort: 50017
         readinessProbe:
