--- a/Kubernetes-prod/Kubernetes-manifest/azure-repo.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/azure-repo.yaml
@@ -24,7 +24,7 @@ spec:
       #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
       containers:
       - name: azure-pipeline-repo
-        image: speedtools.azurecr.io/knowhow-azure-pipeline-repo:9.1.0
+        image: speedtools.azurecr.io/knowhow-azure-pipeline-repo:9.2.0
         imagePullPolicy: Always
         env:
             - name: spring.data.mongodb.uri
@@ -65,7 +65,10 @@ spec:
               value: "0 0 */12 * * *"
             - name: azurerepo.cron
               value: "0 0 */12 * * *"
-        # resources:
+        resources:
+          limits:
+            memory: "2Gi"
+            cpu: "1"
         #   requests:
         #     memory: "1Gi"
         #     cpu: "0.5"
