--- a/Kubernetes-prod/Kubernetes-manifest/configmap.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/configmap.yaml
@@ -18,8 +18,8 @@ data:
   auth.domain: "tools.publicis.sapient.com"
   forgotPassword.uiHost: "psknowhow.tools.publicis.sapient.com"
   corsFilterValidOrigin: "psknowhow.tools.publicis.sapient.com"
-  isRepoToolEnable: "true"
-  versionnumber: "9.1.0"
+  isRepoToolEnable: "false"
+  versionnumber: "9.2.0"
   priority.P1: "p1,P1 - Blocker, blocker, 1, 0, p0, Urgent"
   priority.P2: "p2, critical, P2 - Critical, 2"
   priority.P3: "p3, P3 - Major, major, 3, High"
