--- a/Kubernetes-prod/Kubernetes-manifest/ui.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/ui.yaml
@@ -27,15 +27,18 @@ spec:
       #   command: ['sh', '-c', "until nslookup knowhow-ui-knowhow.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for knowhow-ui; sleep 2; done"]
       containers:
       - name: knowhow-ui
-        image: speedtools.azurecr.io/knowhow-ui:9.1.0
+        image: speedtools.azurecr.io/knowhow-ui:9.2.0
         imagePullPolicy: Always
         ports:
         - containerPort: 80
         # - containerPort: 443
-        # resources:
-        #   requests:
-        #     memory: "1Gi"
-        #     cpu: "0.5"
+        resources:
+          #requests:
+          #  memory: "128Mi"
+          #  cpu: "0.1"
+          limits:
+            memory: "1Gi"
+            cpu: "0.5"
         readinessProbe:
           httpGet:
             path: /
