--- a/Kubernetes-prod/knowhow-helm/repotool-scanner-scheduler/cronjob.yaml
+++ b/Kubernetes-prod/knowhow-helm/repotool-scanner-scheduler/cronjob.yaml
@@ -85,9 +85,9 @@ spec:
               limits:
                 cpu: 2000m
                 memory: 1024Mi
-              requests:
-                cpu: 200m
-                memory: 512Mi
+             # requests:
+             #   cpu: 200m
+             #   memory: 512Mi
             securityContext:
               allowPrivilegeEscalation: false
               privileged: false
@@ -112,4 +112,4 @@ spec:
           terminationGracePeriodSeconds: 30
   schedule: "0 */12 * * *"
   successfulJobsHistoryLimit: 3
-  suspend: false
+  suspend: true
