--- a/UI/nginx/files/nginx-dev.conf
+++ b/UI/nginx/files/nginx-dev.conf
@@ -31,8 +31,8 @@ server
 
     ssl on;
     ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_certificate         /etc/ssl/certs/ca.cert;
-    #ssl_certificate_key     /etc/ssl/certs/knowhow_ssl.key;
+    ssl_certificate         /etc/ssl/certs/tls.crt;
+    ssl_certificate_key     /etc/ssl/certs/tls.key;
     #ssl_password_file       /etc/ssl/certs/knowhow_ssl_passphrase.txt;
     #add_header 'Access-Control-Allow-Origin' '*';
 
