docker compose file port change

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,8 +50,8 @@ services:
     mem_limit: 1024m
     mem_reservation: 256m
     ports:
-      - 80:80  # If you are not installing Auth service make this port 82:80
-      - 443:443  # If you are not installing Auth service make this port 445:443
+      - 80:80  # If you are installing Auth service make this port 82:80
+      - 443:443  # If you are installing Auth service make this port 445:443
     volumes:
       - uivol:/var/log/nginx
       #- /app/apps/certs/:/etc/ssl/certs/ # If you have your SSL certificate uncomment it and copy to /app/apps/certs directory 
