authdb changes commited

--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 #datasource
 #NeededToUpdate
-spring.datasource.url=jdbc:postgresql://postgres-auth-scm:5432/authNauth
+spring.datasource.url=jdbc:postgresql://authdb:5432/authNauth
 spring.datasource.username=authdb
 #NeededToUpdate
 spring.datasource.password=
