Comments/ description updated of field info

--- a/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
+++ b/customapi/src/main/resources/json/mongock/default/field_mapping_structure.json
@@ -2782,7 +2782,7 @@
     "fieldCategory": "releases",
     "section": "Custom Fields Mapping",
     "tooltip": {
-      "definition": "Select release to predict the release prediction end date of active release on the basis of average velocity"
+      "definition": "Select releases to define team velocity as per ticket"
     }
   },
   {
