--- a/central-auth-service/central-login-ui-react/nginx/nginx_dev.conf
+++ b/central-auth-service/central-login-ui-react/nginx/nginx_dev.conf
@@ -52,11 +52,10 @@ http {
 
 }
     server {
-        listen       443;
+        listen       443 ssl;
         server_name  localhost;
         add_header Strict-Transport-Security "max-age=31536000; includeSubDomains";
         add_header X-Frame-Options DENY always;
-		ssl on;
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_certificate         /etc/ssl/certs/knowhow_ssl.cer;
         ssl_certificate_key     /etc/ssl/certs/knowhow_ssl.key;
