--- a/Kubernetes/Kubernetes-manifest/promtail-configmap.yaml
+++ b/Kubernetes/Kubernetes-manifest/promtail-configmap.yaml
@@ -16,10 +16,52 @@ data:
       - url: http://loki.stage-dashboard.svc.cluster.local:3100/loki/api/v1/push
 
     scrape_configs:
-      - job_name: customapi-promtail
+      - job_name: customapi
         static_configs:
           - targets:
               - localhost
             labels:
-              app: customapi-promtail
+              app: customapi
+              __path__: /app/logs/*.log
+      - job_name: azure-board-processor
+        static_configs:
+          - targets:
+              - localhost
+            labels:
+              app: azure-board-processor
+              __path__: /app/logs/*.log
+      - job_name: azure-pipeline-repo
+        static_configs:
+          - targets:
+              - localhost
+            labels:
+              app: azure-pipeline-repo
+              __path__: /app/logs/*.log
+      - job_name: devops-processor
+        static_configs:
+          - targets:
+              - localhost
+            labels:
+              app: devops-processor
+              __path__: /app/logs/*.log
+      - job_name: jira-processor
+        static_configs:
+          - targets:
+              - localhost
+            labels:
+              app: jira-processor
+              __path__: /app/logs/*.log
+      - job_name: kafka-consumers
+        static_configs:
+          - targets:
+              - localhost
+            labels:
+              app: kafka-consumers
+              __path__: /app/logs/*.log
+      - job_name: knowhow-ui
+        static_configs:
+          - targets:
+              - localhost
+            labels:
+              app: knowhow-ui
               __path__: /app/logs/*.log
