--- a/Kubernetes/Kubernetes-manifest/devops.yaml
+++ b/Kubernetes/Kubernetes-manifest/devops.yaml
@@ -110,14 +110,14 @@ spec:
             - name: knowhow-secrets-store
               mountPath: "/mnt/stage-secrets-store"
               readOnly: true
-            - name: log-volume
+            - name: devops-processor-log-volume
               mountPath: /app/logs
       - name: promtail
         image: grafana/promtail:2.9.2
         args: 
           - -config.file=/etc/promtail/config/promtail.yaml
         volumeMounts:
-          - name: log-volume
+          - name: devops-processor-log-volume
             mountPath: /app/logs
           - name: promtail-config
             mountPath: /etc/promtail/config
@@ -129,7 +129,7 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: "stage-secretproviderclass"
-        - name: log-volume
+        - name: devops-processor-log-volume
           emptyDir: {}
         - name: promtail-config
           configMap:
