--- a/Kubernetes/Kubernetes-manifest/ui.yaml
+++ b/Kubernetes/Kubernetes-manifest/ui.yaml
@@ -57,20 +57,20 @@ spec:
           - configMapRef:
               name: knowhow-config
         volumeMounts:
-            - name: log-volume
+            - name: knowhow-ui-log-volume
               mountPath: /app/logs
       - name: promtail
         image: grafana/promtail:2.9.2
         args: 
           - -config.file=/etc/promtail/config/promtail.yaml
         volumeMounts:
-          - name: log-volume
+          - name: knowhow-ui-log-volume
             mountPath: /app/logs
           - name: promtail-config
             mountPath: /etc/promtail/config
 
     volumes:
-        - name: log-volume
+        - name: knowhow-ui-log-volume
           emptyDir: {}
         - name: promtail-config
           configMap:
