reverting api and jira

--- a/Kubernetes/Kubernetes-manifest/jira.yaml
+++ b/Kubernetes/Kubernetes-manifest/jira.yaml
@@ -102,17 +102,17 @@ spec:
             - name: knowhow-secrets-store
               mountPath: "/mnt/stage-secrets-store"
               readOnly: true
-            - name: jira-processor-log-volume
-              mountPath: /app/logs
-      - name: promtail
-        image: grafana/promtail:2.9.2
-        args: 
-          - -config.file=/etc/promtail/config/promtail.yaml
-        volumeMounts:
-          - name: jira-processor-log-volume
-            mountPath: /app/logs
-          - name: promtail-config
-            mountPath: /etc/promtail/config
+      #       - name: jira-processor-log-volume
+      #         mountPath: /app/logs
+      # - name: promtail
+      #   image: grafana/promtail:2.9.2
+      #   args: 
+      #     - -config.file=/etc/promtail/config/promtail.yaml
+      #   volumeMounts:
+      #     - name: jira-processor-log-volume
+      #       mountPath: /app/logs
+      #     - name: promtail-config
+      #       mountPath: /etc/promtail/config
             
       volumes:
         - name: knowhow-secrets-store
@@ -121,11 +121,11 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: "stage-secretproviderclass"
-        - name: jira-processor-log-volume
-          emptyDir: {}
-        - name: promtail-config
-          configMap:
-            name: promtail-config
+        # - name: jira-processor-log-volume
+        #   emptyDir: {}
+        # - name: promtail-config
+        #   configMap:
+        #     name: promtail-config
 
 ---
 apiVersion: v1
