--- a/Kubernetes/Kubernetes-manifest/azure-board.yaml
+++ b/Kubernetes/Kubernetes-manifest/azure-board.yaml
@@ -64,12 +64,12 @@ spec:
             - name: azure.cron
               value: "0 0 */12 * * *"
         resources:
-          #requests:
-          #  memory: "200Mi"
-          #  cpu: "0.2"
+          requests:
+           memory: "250Mi"
+           cpu: "0.2"
           limits:
-            memory: "2Gi"
-            cpu: "1"
+            memory: "750Mi"
+            cpu: "0.5"
         ports:
           - containerPort: 50017
         readinessProbe:
@@ -89,17 +89,17 @@ spec:
             - name: knowhow-secrets-store
               mountPath: "/mnt/stage-secrets-store"
               readOnly: true
-            # - name: azure-board-processor-log-volume
-            #   mountPath: /app/logs
-      # - name: promtail
-      #   image: grafana/promtail:2.9.2
-      #   args: 
-      #     - -config.file=/etc/promtail/config/promtail.yaml
-      #   volumeMounts:
-      #     - name: azure-board-processor-log-volume
-      #       mountPath: /app/logs
-      #     - name: promtail-config
-      #       mountPath: /etc/promtail/config
+            - name: azure-board-processor-log-volume
+              mountPath: /app/logs
+      - name: promtail
+        image: grafana/promtail:2.9.2
+        args: 
+          - -config.file=/etc/promtail/config/promtail.yaml
+        volumeMounts:
+          - name: azure-board-processor-log-volume
+            mountPath: /app/logs
+          - name: promtail-config
+            mountPath: /etc/promtail/config
 
       volumes:
         - name: knowhow-secrets-store
@@ -108,11 +108,11 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: "stage-secretproviderclass"
-        # - name: azure-board-processor-log-volume
-        #   emptyDir: {}
-        # - name: promtail-config
-        #   configMap:
-        #     name: promtail-config
+        - name: azure-board-processor-log-volume
+          emptyDir: {}
+        - name: promtail-config
+          configMap:
+            name: promtail-config
 
 ---
 apiVersion: v1
