--- a/Kubernetes/Kubernetes-manifest/devops.yaml
+++ b/Kubernetes/Kubernetes-manifest/devops.yaml
@@ -87,12 +87,12 @@ spec:
         - configMapRef:
             name: knowhow-config
         resources:
-          # requests:
-          #   memory: "1Gi"
-          #   cpu: "0.5"
-          # limits:
-          #  memory: "6Gi"
-          #  cpu: "1"
+          requests:
+            memory: "3Gi"
+            cpu: "0.3"
+          limits:
+           memory: "6Gi"
+           cpu: "0.5"
         ports:
         - containerPort: 50001
         - containerPort: 50002
@@ -110,17 +110,17 @@ spec:
             - name: knowhow-secrets-store
               mountPath: "/mnt/stage-secrets-store"
               readOnly: true
-      #       - name: devops-processor-log-volume
-      #         mountPath: /app/logs
-      # - name: promtail
-      #   image: grafana/promtail:2.9.2
-      #   args: 
-      #     - -config.file=/etc/promtail/config/promtail.yaml
-      #   volumeMounts:
-      #     - name: devops-processor-log-volume
-      #       mountPath: /app/logs
-      #     - name: promtail-config
-      #       mountPath: /etc/promtail/config
+            - name: devops-processor-log-volume
+              mountPath: /app/logs
+      - name: promtail
+        image: grafana/promtail:2.9.2
+        args: 
+          - -config.file=/etc/promtail/config/promtail.yaml
+        volumeMounts:
+          - name: devops-processor-log-volume
+            mountPath: /app/logs
+          - name: promtail-config
+            mountPath: /etc/promtail/config
 
       volumes:
         - name: knowhow-secrets-store
@@ -129,11 +129,11 @@ spec:
             readOnly: true
             volumeAttributes:
               secretProviderClass: "stage-secretproviderclass"
-        # - name: devops-processor-log-volume
-        #   emptyDir: {}
-        # - name: promtail-config
-        #   configMap:
-        #     name: promtail-config
+        - name: devops-processor-log-volume
+          emptyDir: {}
+        - name: promtail-config
+          configMap:
+            name: promtail-config
 
 ---
 
