--- a/Kubernetes/Kubernetes-manifest/kafka.yaml
+++ b/Kubernetes/Kubernetes-manifest/kafka.yaml
@@ -23,13 +23,13 @@ spec:
 #        image: bitnami/kafka:latest
         securityContext:
           runAsUser: 0
-        resources:
-          requests:
-            memory: "300Mi"
-            cpu: "0.1"
-          limits:
-            memory: "500Mi"
-            cpu: "0.3"
+        #resources:
+        #  requests:
+        #    memory: "300Mi"
+        #    cpu: "0.1"
+        #  limits:
+        #    memory: "1024Mi"
+        #    cpu: "0.5"
         ports:
          - containerPort: 9092
         env:
