--- a/Kubernetes-prod/Kubernetes-manifest/customapi.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/customapi.yaml
@@ -30,11 +30,11 @@ spec:
           ports:
             - containerPort: 8080
           resources:
-           # requests:
-           #   memory: "1Gi"
-           #   cpu: "0.5"
+            requests:
+              memory: "750Mi"
+              cpu: "0.3"
             limits:
-              memory: "3Gi"
+              memory: "4Gi"
               cpu: "1"
           readinessProbe:
             tcpSocket:
