--- a/Kubernetes-prod/Kubernetes-manifest/kafka-consumers.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/kafka-consumers.yaml
@@ -69,10 +69,13 @@ spec:
 
         ports:
         - containerPort: 50020
-        # resources:
-        #   requests:
-        #     memory: "1Gi"
-        #     cpu: "0.5"
+        resources:
+          requests:
+            memory: "200Mi"
+            cpu: "0.1"
+          limits:
+            memory: "500Mi"
+            cpu: "0.3"
         # readinessProbe:
         #  tcpSocket:
         #    port: 50020
